helloworld/server/helloworld-dev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - name: helloworld
        image: index.docker.io/rickyp999/helloworld:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 50051
      - name: envoy
        image: index.docker.io/envoyproxy/envoy:5ec8b37da9de5893c04f75bbf2820014c62ea529
        command:
        - "/usr/local/bin/envoy"
        args:
        - "--config-path /etc/envoy/envoy-config.yaml"
        - "--mode serve"
        - "--service-cluster local_service_grpc"
        - --v2-config-only
        ports:
        - containerPort: 50052
        - containerPort: 9901
          protocol: TCP
          name: envoy-admin
        volumeMounts:
        - name: envoy-config
          mountPath: /etc/envoy
      volumes:
      - name: envoy-config
        configMap:
          name: server-envoy-config
